Fixing dark mode position

--- a/src/components/SideDrawer/DrawerToggleButton.scss
+++ b/src/components/SideDrawer/DrawerToggleButton.scss
@@ -1,3 +1,6 @@
+$red: #D92938;
+
+
 .toggle-button {
     display: flex;
     flex-direction: column;
@@ -18,5 +21,5 @@
   .toggle-button__line {
     width: 30px;
     height: 2px;
-    background: white;
+    background: $red;
   }
