--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,3 +1,11 @@
+
+
+
+
+
+
+
+
 .toolbar {
     position: fixed;
     top: 0;
@@ -14,16 +22,16 @@
     padding: 0 1rem;
 }
 
-.toolbar__logo {
-    margin-left: 1rem;
-    a{
-    color: white;
-    font-size: 2rem;
-    text-decoration: none;
+// .toolbar__logo {
+//     margin-left: 1rem;
+//     a{
+//     // color: white;
+//     font-size: 2rem;
+//     text-decoration: none;
 
-    }
+//     }
     
-}
+// }
 
 .toolbar_navigation-items{
 
